# unishare

./: Docker-compose.yaml  Dockerfile  README.md  package-lock.json  package.json  startup.sh
backend/: Cargo.toml
backend/migrations/2023-04-11-205203_auth_v1/: down.sql  up.sql
backend/migrations/2023-04-18-093641_session_v1/: down.sql  up.sql
backend/migrations/2023-04-23-174643_user_data_v1/: down.sql  up.sql
backend/migrations/2023-04-23-174822_reviews_v1/: down.sql  up.sql
backend/migrations/2023-05-05-085650_user_view/: down.sql  up.sql
backend/migrations/2023-05-06-214338_files_v1/: down.sql  up.sql
backend/migrations/2023-05-06-231658_purchases_v1/: down.sql  up.sql
backend/migrations/2023-05-06-231658_transactions_v1/: down.sql  up.sql
backend/migrations/2023-05-10-211116_file_reviews_v1/: down.sql  up.sql
backend/migrations/2023-06-24-123755_reports_v1/: down.sql  up.sql
backend/src/: main.rs  schema.rs
backend/src/entities/: error.rs  file.rs  file_review  file_review.rs  file_user_view.rs  mod.rs  report.rs  session.rs  transaction.rs  user.rs  user_auth.rs  user_data.rs  user_review.rs
backend/src/services/: auth.rs  auth_services.rs  file_services.rs  logout.rs  mod.rs  report_services.rs  tokenMiddleware.rs  token_middleware.rs  user_services.rs  webapp.rs
database/: 1-unishare.sql  pg_hba.conf
frontend/: package-lock.json  package.json
frontend/src/: Account.jsx  Explore.jsx  Home.jsx  Loggedin.jsx  Login.jsx  PasswordReset.jsx  PasswordSet.jsx  Profile.jsx  Registration.jsx  Tos.jsx  UserForm.jsx  form.css  index.css  (+2 more)
(+118 files in other folders)
