[package]
name = "unishare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4.3.1", features = ["cookies"] }
actix-web-httpauth = "0.8.0"
argon2 = "0.5.0"
diesel = { version = "2.0.3", default-features = false, features = ["postgres", "uuid", "r2d2"] }
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0.160", features = ["derive"] }
sha256 = "1.1.2"
uuid = { version = "1.3.1", features = ["v4", "fast-rng", "serde"] }
